[package]
name = "wfm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wfm"
path = "src/main.rs"

[dependencies]
anyhow  = "1"
clap    = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde   = { version = "1",  features = ["derive"] }
tokio   = { version = "1",  features = ["full"] }
