[package]
name = "wfmq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wfmq"
path = "src/main.rs"

[dependencies]
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
reqwest   = { version = "0.12", features = ["json"] }
serde     = { version = "1",  features = ["derive"] }
serde_json = "1"
tokio     = { version = "1",  features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots", "native-tls"] }
futures-util      = "0.3"
chrono = "0.4.45"
